# data-cleaning-env

./: Dockerfile  README.md  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
tasks/: easy.json  hard.json  medium.json
