[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "An OpenEnv-compatible data cleaning environment where an AI agent learns to clean real-world messy data."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["openenv", "data-cleaning", "ai", "reinforcement-learning"]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pandas",
    "openpyxl",
    "pyyaml",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[openenv]
name        = "data-cleaning-env"
version     = "1.0.0"
entry_point = "env:DataCleaningEnv"
inference   = "inference.py"

[openenv.action_space]
type = "string"

[openenv.observation_space]
type = "object"

[openenv.reward]
type    = "float"
minimum = 0.0
maximum = 1.0
