[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-cleaning-env"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "pandas",
    "openpyxl",
    "pyyaml",
    "python-multipart",
]

[project.scripts]
serve = "server.app:main"

[openenv]
name = "data-cleaning-env"
version = "1.0.0"
entry_point = "env:DataCleaningEnv"
inference = "inference.py"

[openenv.action_space]
type = "string"

[openenv.observation_space]
type = "object"

[openenv.reward]
type = "float"
minimum = 0.0
maximum = 1.0
